# cmake-guide

./: .gitignore  readme.md  shell.nix
armadillo/: Armadillo-config.cmake  CMakeLists.txt  armadillo-config.cmake  armadillo.cpp  armadillo.hpp
chimpanzee/: CMakeLists.txt  chimpanzee.cpp
myapp/: CMakeLists.txt  myapp.cpp
mylib/: CMakeLists.txt  mylib-config.cmake  mylib.cpp  mylib.h
mylib-header/: CMakeLists.txt  mylib-header-config.cmake  mylib-header.h
